Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -44,10 +44,7 @@
 
 </br>
 
-## < RAP 개발 >
-</br>
-
-#### < RAP 개발 흐름 정리 (CDS 기반) >
+## < RAP 개발 흐름 정리 (CDS 기반) >
 1) `Interface View` → 실제 테이블 기반의 핵심 데이터 모델 정의
 2) `Projection View (Consumption View)` → 외부에 노출할 필드만 선택해 정리
 3) `Metadata Extension` → 화면(UI) 관련 설정 추가
