Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -114,6 +114,40 @@ association to scarr as _Scarr
 <img width="536" height="413" alt="image" src="https://github.com/user-attachments/assets/da47c335-2f04-45b9-92ee-51bc2a71b83a" />
 </br>
 </br>
+
+- Interface View를 기반으로 외부에 노출할 필드를 정의하는 Projection(Consumption) CDS 코드를 생성
+- 서비스에 직접 노출될 Consumption View라면 `root` 선언이 필수
+```abap
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Consumption View (root, Projection View)'
+@Metadata.ignorePropagatedAnnotations: false
+define root view entity ZDSFLIGHT_CR_B03
+    as projection on ZDSFLIGHT_IR_B03
+{
+    @UI.lineItem: [{ position: 10, label: 'Carrier' }]
+    @UI.selectionField: [{ position: 10 }]
+    // @EndUserText.label: '항공사2' // 이름 (기본: Data elemen) 덮어쓰기
+    key Carrid,
+    @UI.lineItem: [{ position: 30, label: '항공평' }]
+    @UI.selectionField: [{ position: 20 }]
+    key Connid,
+    @UI.lineItem: [{ position: 40, label: '비행일' }]
+    key Fldate,
+    @UI.lineItem: [{ position: 20, label: '항공편이름' }]
+    Carrname,
+    @UI.lineItem: [{ position: 50, label: '가격' }]
+    Price,
+    @UI.lineItem: [{ position: 60, label: '통화키' }]
+    Currency,
+    @UI.lineItem: [{ position: 70, label: '항공기타입' }]
+    @UI.selectionField: [{ position: 30 }]
+    Planetype,
+    @UI.lineItem: [{ position: 80, label: '최대좌석수' }]
+    Seatsmax,
+    @UI.lineItem: [{ position: 90, label: '예약좌석수' }]
+    Seatsocc
+}
+```
 </br>
 </br>
 
@@ -224,37 +258,6 @@ association to scarr as _Scarr
 ```abap
 @UI.lineItem: [{ position: <순서>, label: '<컬럼명>' }]    // <순서> → 화면에 표시될 위치
 @UI.selectionField: [{ position: <순서> }]                // <컬럼명> → 테이블에 보일 컬럼 제목
-```
-```abap
-@AccessControl.authorizationCheck: #NOT_REQUIRED
-@EndUserText.label: 'Consumption View (root, Projection View)'
-@Metadata.ignorePropagatedAnnotations: false
-define root view entity ZDSFLIGHT_CR_B03
-    as projection on ZDSFLIGHT_IR_B03
-{
-    @UI.lineItem: [{ position: 10, label: 'Carrier' }]
-    @UI.selectionField: [{ position: 10 }]
-    // @EndUserText.label: '항공사2' // 이름 (기본: Data elemen) 덮어쓰기
-    key Carrid,
-    @UI.lineItem: [{ position: 30, label: '항공평' }]
-    @UI.selectionField: [{ position: 20 }]
-    key Connid,
-    @UI.lineItem: [{ position: 40, label: '비행일' }]
-    key Fldate,
-    @UI.lineItem: [{ position: 20, label: '항공편이름' }]
-    Carrname,
-    @UI.lineItem: [{ position: 50, label: '가격' }]
-    Price,
-    @UI.lineItem: [{ position: 60, label: '통화키' }]
-    Currency,
-    @UI.lineItem: [{ position: 70, label: '항공기타입' }]
-    @UI.selectionField: [{ position: 30 }]
-    Planetype,
-    @UI.lineItem: [{ position: 80, label: '최대좌석수' }]
-    Seatsmax,
-    @UI.lineItem: [{ position: 90, label: '예약좌석수' }]
-    Seatsocc
-}
 ```
 </br>
 </br>
