Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -151,8 +151,8 @@ define root view entity ZDSFLIGHT_CR_B03
 </br>
 </br>
 
-### 3) Metadata Extension 생성
-- Projection(Consumption) View 선택 후 New Metadata Extension을 생성
+### 3) Projection View에서 Service Definition 생성
+- Projection(CR) View를 선택한 후 New Service Definition을 생성해 해당 View를 OData 서비스로 노출
 <img width="538" height="288" alt="image" src="https://github.com/user-attachments/assets/19ffbe5e-eded-4f5d-bae1-a37ced557abe" />
 </br>
 </br>
