Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -72,6 +72,7 @@
 </br>
 
 - sflight을 기반으로 항공편 데이터와 항공사 정보를 Association으로 연결
+- _Scarr Association 자체를 외부에 노출하려는 경우에만 필요하고, 단순 필드 조회만 할 거면 없어도 됨
 ```abap
 @AccessControl.authorizationCheck: #NOT_REQUIRED
 @EndUserText.label: 'Interface view (root)'
