Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -162,6 +162,15 @@ define root view entity ZDSFLIGHT_CR_B03
 <img width="536" height="381" alt="image" src="https://github.com/user-attachments/assets/0431f414-4bb6-47da-9b89-cfb2337ed132" />
 </br>
 </br>
+
+- `as Flight` 는 `ZDSFLIGHT_CR_B03` 를 OData 서비스에서 Entity Set 이름을 Flight로 노출하겠다는 의미
+- `as Flight` 를 안 쓰면 CDS View 이름(`ZDSFLIGHT_CR_B03`)이 그대로 OData Entity 이름으로 노출됨
+```abap
+@EndUserText.label: 'Service Definition'
+define service ZSFLIGHT_SRV_B03 {
+  expose ZDSFLIGHT_CR_B03 as Flight;
+}
+```
 </br>
 </br>
 
