Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -307,6 +307,7 @@ define service ZSFLIGHT_SRV_B03 {
 </br>
 </br>
 </br>
+</br>
 
 ### 2) `ZDSFLIGHT_CR_B03` Metadata Extension (UI 어노테이션 정의)
 - Projection View에 대해 annotate view를 사용해 리스트 컬럼과 필터 필드를 UI 어노테이션으로 별도 정의
@@ -358,6 +359,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 ```
 </br>
 </br>
+</br>
 
 ### 3) `ZDSFLIGHT_CR_B03` Projection View 어노테이션 제거
 - UI 어노테이션을 Metadata Extension으로 분리했기 때문에, Projection View 안의 UI 어노테이션은 제거
@@ -388,6 +390,15 @@ define root view entity ZDSFLIGHT_CR_B03
 
 }
 ```
+</br>
+</br>
+</br>
+
+### 4) SAP Fiori Generator – List Report Page 선택
+- Fiori 애플리케이션 생성 시 List Report Page 템플릿을 선택해 리스트 화면과 오브젝트 페이지가 함께 생성되도록 설정
+
+<img width="645" height="274" alt="image" src="https://github.com/user-attachments/assets/40dc36af-39b5-4035-b49c-e8eae372ff32" />
+
 </br>
 </br>
 </br>
