Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -398,6 +398,28 @@ define root view entity ZDSFLIGHT_CR_B03
 - Fiori 애플리케이션 생성 시 List Report Page 템플릿을 선택해 리스트 화면과 오브젝트 페이지가 함께 생성되도록 설정
 
 <img width="645" height="274" alt="image" src="https://github.com/user-attachments/assets/40dc36af-39b5-4035-b49c-e8eae372ff32" />
+</br>
+</br>
+</br>
+
+### 5) Service Binding에서 Service URL 확인
+- Service Binding이 Published 상태일 때, 표시된 Service URL을 통해 OData 서비스 엔드포인트를 확인
+<img width="654" height="226" alt="image" src="https://github.com/user-attachments/assets/986e7c57-90e9-49a3-b430-a623745fbb2a" />
+</br>
+</br>
+</br>
+
+### 6) Fiori Generator – OData 서비스 선택
+- Fiori 앱 생성 시 연결할 시스템을 선택하고, 사용할 OData 서비스(`ZSFLIGHT_SRV_B03`)를 지정
+<img width="519" height="267" alt="image" src="https://github.com/user-attachments/assets/30697adb-ebd8-4512-a2ee-2ec421589a5b" />
+</br>
+</br>
+</br>
+
+### 7) Fiori Generator – Entity 선택
+- 선택한 OData 서비스에서 사용할 Main Entity(Flight)를 지정하고, 테이블 타입(Responsive)을 설정
+
+<img width="531" height="267" alt="image" src="https://github.com/user-attachments/assets/9b1ee642-934f-420e-9d4d-37f51fc87eff" />
 
 </br>
 </br>
