Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -44,6 +44,9 @@
 
 </br>
 
+# < RAP 기반 CDS → OData → Fiori Elements 전체 구현 흐름 정리 >
+</br>
+
 ## < RAP 개발 흐름 정리 (CDS 기반) >
 1) `Interface View` → 실제 테이블 기반의 핵심 데이터 모델 정의
 2) `Projection View (Consumption View)` → 외부에 노출할 필드만 선택해 정리
@@ -280,12 +283,9 @@ define service ZSFLIGHT_SRV_B03 {
 </br>
 </br>
 </br>
-
----
-
 </br>
 
-## < RAP Metadata Extension을 활용한 UI 어노테이션 분리 및 관리 절차 >
+## < RAP Metadata Extension 적용 후 Fiori Elements 앱 생성 및 서비스 연동 절차 >
 </br>
 
 ### 1) Projection View에서 Metadata Extension 생성
@@ -401,6 +401,8 @@ define root view entity ZDSFLIGHT_CR_B03
 </br>
 </br>
 </br>
+</br>
+</br>
 
 ### 5) Service Binding에서 Service URL 확인
 - Service Binding이 Published 상태일 때, 표시된 Service URL을 통해 OData 서비스 엔드포인트를 확인
@@ -408,10 +410,14 @@ define root view entity ZDSFLIGHT_CR_B03
 </br>
 </br>
 </br>
+</br>
+</br>
 
 ### 6) Fiori Generator – OData 서비스 선택
 - Fiori 앱 생성 시 연결할 시스템을 선택하고, 사용할 OData 서비스(`ZSFLIGHT_SRV_B03`)를 지정
 <img width="519" height="267" alt="image" src="https://github.com/user-attachments/assets/30697adb-ebd8-4512-a2ee-2ec421589a5b" />
+</br>
+</br>
 </br>
 </br>
 </br>
