Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -187,6 +187,7 @@ define service ZSFLIGHT_SRV_B03 {
 </br>
 </br>
 
+- Service Binding은 보통 Service Definition과 동일한 이름으로 생성함
 - Service Definition을 OData V2(UI) 방식으로 바인딩해 실제 실행 가능한 서비스로 연결
 <img width="536" height="366" alt="image" src="https://github.com/user-attachments/assets/c96ea090-38df-4efa-b4e8-80e3b3bae343" />
 </br>
