Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -440,6 +440,64 @@ define root view entity ZDSFLIGHT_CR_B03
 </br>
 </br>
 
+## < 추가 기능들 >
+</br>
+
+### < RAP 어노테이션 정리 (Projection View vs Metadata Extension) >
+
+#### 1) Projection View에 주로 작성하는 어노테이션
+
+| 어노테이션 | 설명 |
+|------------|------|
+| `@AccessControl.authorizationCheck` | 권한 체크 설정 |
+| `@EndUserText.label` | CDS 설명 텍스트 |
+| `@Metadata.allowExtensions` | Metadata Extension 허용 여부 |
+| `@Metadata.ignorePropagatedAnnotations` | 상위 어노테이션 전파 제어 |
+| `@Semantics.amount.currencyCode` | 금액-통화 연결 |
+| `@Semantics.quantity.unitOfMeasure` | 수량-단위 연결 |
+| `@ObjectModel.transactionalProcessingEnabled` | 트랜잭션 처리 활성화 |
+| `@ObjectModel.compositionRoot` | 컴포지션 루트 지정 |
+| `@ObjectModel.readOnly` | 읽기 전용 설정 |
+| `@ObjectModel.createEnabled` | 생성 허용 |
+| `@ObjectModel.updateEnabled` | 수정 허용 |
+| `@ObjectModel.deleteEnabled` | 삭제 허용 |
+| `@Search.searchable` | 검색 가능 여부 |
+| `@Search.defaultSearchElement` | 기본 검색 필드 |
+| `@Search.fuzzinessThreshold` | 퍼지 검색 허용 범위 |
+| `@Consumption.valueHelpDefinition` | 값 도움(Value Help) 연결 |
+| `@Consumption.filter` | 필터 동작 정의 |
+| `@Consumption.hidden` | 소비 계층에서 숨김 |
+| `@Analytics.dataCategory` | 분석 모델 분류 |
+| `@Analytics.query` | 분석 쿼리 정의 |
+| `define root view entity` | 루트 엔티티 선언 |
+| `key` | 기본키 정의 |
+| `association` | 연관 객체 정의 |
+
+</br>
+
+#### 2) Metadata Extension에 주로 작성하는 어노테이션 
+
+| 어노테이션 | 설명 |
+|------------|------|
+| `@UI.lineItem` | 리스트 컬럼 표시 |
+| `@UI.selectionField` | 필터 영역 표시 |
+| `@UI.hidden` | 화면에서 필드 숨김 |
+| `@UI.headerInfo` | Object Page 상단 제목 설정 |
+| `@UI.identification` | 상세 화면 기본 필드 |
+| `@UI.fieldGroup` | 필드 그룹 구성 |
+| `@UI.facet` | Object Page 섹션 구성 |
+| `@UI.presentationVariant` | 정렬/그룹 설정 |
+| `@UI.dataPoint` | KPI/강조 숫자 표시 |
+| `@UI.chart` | 차트 설정 |
+| `@UI.tableType` | 테이블 유형 설정 |
+| `@UI.importance` | 중요도 설정 (Responsive 영향) |
+| `@UI.multiLineText` | 멀티라인 텍스트 표시 |
+| `@UI.quickInfo` | 툴팁 설명 |
+| `@UI.selectionVariant` | 기본 필터 세팅 |
+| `@UI.lineItem.importance` | 컬럼 우선순위 설정 |
+
+
+
 - 어노테이션 그룹핑 Grouping : 같은 필드에 적용되는 UI 설정을` @UI: { }` 안에 공통으로 묶어서 정의하는 방식
 ```abap
 @UI: {
