Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -444,57 +444,42 @@ define root view entity ZDSFLIGHT_CR_B03
 </br>
 
 ### < RAP 어노테이션 정리 (Projection View vs Metadata Extension) >
+- `Projection View` : 데이터를 어떻게 쓰게 할지(동작·의미)를 구상하는 곳
+- `Metadata Extension` : 화면에 어떻게 보이게 할지(배치·표시)를 구상하는 곳
+</br>
 
-#### 1) Projection View에 주로 작성하는 어노테이션
+#### 1) Projection View에 작성된 어노테이션 (구조 · 검색 · 값도움 · 모델 성격)
 
-| 어노테이션 | 설명 |
-|------------|------|
-| `@AccessControl.authorizationCheck` | 권한 체크 설정 |
-| `@EndUserText.label` | CDS 설명 텍스트 |
-| `@Metadata.allowExtensions` | Metadata Extension 허용 여부 |
-| `@Metadata.ignorePropagatedAnnotations` | 상위 어노테이션 전파 제어 |
-| `@Semantics.amount.currencyCode` | 금액-통화 연결 |
-| `@Semantics.quantity.unitOfMeasure` | 수량-단위 연결 |
-| `@ObjectModel.transactionalProcessingEnabled` | 트랜잭션 처리 활성화 |
-| `@ObjectModel.compositionRoot` | 컴포지션 루트 지정 |
-| `@ObjectModel.readOnly` | 읽기 전용 설정 |
-| `@ObjectModel.createEnabled` | 생성 허용 |
-| `@ObjectModel.updateEnabled` | 수정 허용 |
-| `@ObjectModel.deleteEnabled` | 삭제 허용 |
-| `@Search.searchable` | 검색 가능 여부 |
-| `@Search.defaultSearchElement` | 기본 검색 필드 |
-| `@Search.fuzzinessThreshold` | 퍼지 검색 허용 범위 |
-| `@Consumption.valueHelpDefinition` | 값 도움(Value Help) 연결 |
-| `@Consumption.filter` | 필터 동작 정의 |
-| `@Consumption.hidden` | 소비 계층에서 숨김 |
-| `@Analytics.dataCategory` | 분석 모델 분류 |
-| `@Analytics.query` | 분석 쿼리 정의 |
-| `define root view entity` | 루트 엔티티 선언 |
-| `key` | 기본키 정의 |
-| `association` | 연관 객체 정의 |
+| 어노테이션 | 적용 위치 | 설명 |
+|------------|------------|------|
+| `@AccessControl.authorizationCheck: #NOT_REQUIRED` | View 상단 | 권한 체크 비활성화 |
+| `@Metadata.ignorePropagatedAnnotations: false` | View 상단 | 상위 View 어노테이션 전파 허용 |
+| `@Metadata.allowExtensions: true` | View 상단 | Metadata Extension 확장 허용 |
+| `@Search.searchable: true` | View 상단 | 전체 View를 검색 가능하게 설정 |
+| `@Search.defaultSearchElement: true` | Carrid / Currency / Carrname | 기본 검색 필드 지정 |
+| `@Search.fuzzinessThreshold: 0.8` | Carrname | 유사 검색 허용 (80% 일치) |
+| `@Consumption.valueHelpDefinition` | Carrid | F4 Value Help 연결 |
+| `additionalBinding` | Carrid | 값 도움 시 추가 필드 자동 바인딩 |
+| `@ObjectModel.text.element: ['Carrname']` | Carrid | 코드-텍스트 연결 |
+| `@UI.textArrangement: #TEXT_FIRST` | Carrid | 텍스트 먼저 표시 (텍스트-코드 순서) |
 
 </br>
 
-#### 2) Metadata Extension에 주로 작성하는 어노테이션 
+#### 2) Metadata Extension에 작성된 어노테이션 (UI · 화면 구성)
 
-| 어노테이션 | 설명 |
-|------------|------|
-| `@UI.lineItem` | 리스트 컬럼 표시 |
-| `@UI.selectionField` | 필터 영역 표시 |
-| `@UI.hidden` | 화면에서 필드 숨김 |
-| `@UI.headerInfo` | Object Page 상단 제목 설정 |
-| `@UI.identification` | 상세 화면 기본 필드 |
-| `@UI.fieldGroup` | 필드 그룹 구성 |
-| `@UI.facet` | Object Page 섹션 구성 |
-| `@UI.presentationVariant` | 정렬/그룹 설정 |
-| `@UI.dataPoint` | KPI/강조 숫자 표시 |
-| `@UI.chart` | 차트 설정 |
-| `@UI.tableType` | 테이블 유형 설정 |
-| `@UI.importance` | 중요도 설정 (Responsive 영향) |
-| `@UI.multiLineText` | 멀티라인 텍스트 표시 |
-| `@UI.quickInfo` | 툴팁 설명 |
-| `@UI.selectionVariant` | 기본 필터 세팅 |
-| `@UI.lineItem.importance` | 컬럼 우선순위 설정 |
+| 구분 | 어노테이션 | 설명 |
+|------|------------|------|
+| 레이어 | `@Metadata.layer: #CORE` | 메타데이터 적용 레이어 지정 |
+| 헤더 | `@UI.headerInfo` | Object Page 상단 제목 영역 전체 설정 |
+| 헤더 | `typeName` | 오브젝트 페이지 상단에 표시되는 종류 이름(타이틀 라벨) |
+| 헤더 | `typeNamePlural` | 메인(List Report) 화면 상단 제목 |
+| 헤더 | `title` | Object Page에서 크게 보이는 대표 값 |
+| 헤더 | `description` | 대표 값 아래 보이는 보조 설명 |
+| 리스트 | `@UI.lineItem` | List Report 테이블 컬럼 표시 |
+| 필터 | `@UI.selectionField` | 상단 필터 영역 표시 |
+| 숨김 | `@UI.hidden` | 화면에서 해당 필드 숨김 |
+| 그룹 | `@UI: { ... }` | 여러 UI 설정을 하나로 묶는 그룹핑 방식 |
+| 필터동작 | `@Consumption.filter` | 필터 입력 방식 제어 (단일 선택, 기본값, 다중 선택 여부 등) |
 
 
 
