Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -318,10 +318,10 @@ define service ZSFLIGHT_SRV_B03 {
 @Metadata.layer: #CORE                         // 기본(Core) 메타데이터 레이어에서 정의
 @UI: {
     headerInfo: {
-        typeName: 'SFLIGHT Typename',          // 앱 상단에 표시될 단수 이름
-        typeNamePlural: 'Flight Plural',       // 리스트 화면에 표시될 복수 이름
-        title: { value: 'Carrid' },            // 오브젝트 페이지에서 크게 보일 대표 필드
-        description: { value: 'Planetype' }    // 대표 필드 아래 보일 보조 설명 필드
+        typeName: 'SFLIGHT Typename',      // 상세(Object Page) 화면 상단에 표시되는 오브젝트 이름
+        typeNamePlural: 'Flight Plural',   // 메인(List Report) 화면 상단 제목
+        title: { value: 'Carrid' },        // 상세 화면에서 가장 크게 표시되는 대표 값
+        description: { value: 'Planetype' } // 대표 값 아래에 보이는 보조 정보
     }
 }
 // title과 description은 한 행 클릭 시 이동하는 Object Page 상단에 표시되는 제목과 설명 필드를 설정
