Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -311,7 +311,42 @@ define service ZSFLIGHT_SRV_B03 {
 </br>
 </br>
 
-### 2) `ZDSFLIGHT_CR_B03` Metadata Extension (UI 어노테이션 정의)
+### 2) `ZDSFLIGHT_CR_B03` Projection View 어노테이션 제거
+- UI 어노테이션을 Metadata Extension으로 분리했기 때문에, Projection View 안의 UI 어노테이션은 제거
+- Projection View에서 Metadata Extension을 사용하려면 `@Metadata.allowExtensions: true` 를 반드시 설정해야 함
+```abap
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Consumption View (root, Projection View)'
+@Metadata.ignorePropagatedAnnotations: false
+@Metadata.allowExtensions: true
+define root view entity ZDSFLIGHT_CR_B03
+    as projection on ZDSFLIGHT_IR_B03
+{
+
+    // @EndUserText.label: '항공사2' // 이름 (기본: Data elemen) 덮어쓰기
+    key Carrid,
+    key Connid,
+    key Fldate,
+    Carrname,
+    Price,
+    Currency,
+    Planetype,
+    Seatsmax,
+    Seatsocc,
+    Paymentsum,
+    SeatsmaxB,
+    SeatsoccB,
+    SeatsmaxF,
+    SeatsoccF
+
+}
+```
+</br>
+</br>
+</br>
+
+
+### 3) `ZDSFLIGHT_CR_B03` Metadata Extension (UI 어노테이션 정의)
 - Projection View에 대해 annotate view를 사용해 리스트 컬럼과 필터 필드를 UI 어노테이션으로 별도 정의
 - Metadata Extension에 UI 어노테이션을 작성하지 않고 CR(View)에 필드만 추가하면, Fiori에서 톱니바퀴(설정) 버튼 클릭 시 해당 필드가 기본 미선택 상태로 표시
 ```abap
@@ -325,7 +360,6 @@ define service ZSFLIGHT_SRV_B03 {
     }
 }
 // title과 description은 한 행 클릭 시 이동하는 Object Page 상단에 표시되는 제목과 설명 필드를 설정
-
 
 annotate view ZDSFLIGHT_CR_B03 with
 {
@@ -357,39 +391,6 @@ annotate view ZDSFLIGHT_CR_B03 with
   SeatsmaxF;
   @UI.hidden: true
   SeatsoccF;
-}
-```
-</br>
-</br>
-</br>
-
-### 3) `ZDSFLIGHT_CR_B03` Projection View 어노테이션 제거
-- UI 어노테이션을 Metadata Extension으로 분리했기 때문에, Projection View 안의 UI 어노테이션은 제거
-```abap
-@AccessControl.authorizationCheck: #NOT_REQUIRED
-@EndUserText.label: 'Consumption View (root, Projection View)'
-@Metadata.ignorePropagatedAnnotations: false
-@Metadata.allowExtensions: true
-define root view entity ZDSFLIGHT_CR_B03
-    as projection on ZDSFLIGHT_IR_B03
-{
-
-    // @EndUserText.label: '항공사2' // 이름 (기본: Data elemen) 덮어쓰기
-    key Carrid,
-    key Connid,
-    key Fldate,
-    Carrname,
-    Price,
-    Currency,
-    Planetype,
-    Seatsmax,
-    Seatsocc,
-    Paymentsum,
-    SeatsmaxB,
-    SeatsoccB,
-    SeatsmaxF,
-    SeatsoccF
-
 }
 ```
 </br>
