Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -429,6 +429,16 @@ annotate view ZDSFLIGHT_CR_B03 with
 - 선택한 OData 서비스에서 사용할 Main Entity(Flight)를 지정하고, 테이블 타입(Responsive)을 설정
 
 <img width="531" height="267" alt="image" src="https://github.com/user-attachments/assets/9b1ee642-934f-420e-9d4d-37f51fc87eff" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 8) Fiori List Report 화면으로 결과 확인
+- BAS에서 OData 서비스에 연결해 실행하여 결과 확인
+  
+<img width="536" height="231" alt="image" src="https://github.com/user-attachments/assets/81633dd3-e54d-4d8b-93d9-84ec5454474c" />
 
 </br>
 </br>
