Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -275,7 +275,7 @@ define service ZSFLIGHT_SRV_B03 {
 </br>
 </br>
 
-### 9) Fiori Elements 항공편 목록 조회 화면
+### 9) Preview 기능으로 OData 서비스 결과 확인
 - Service Binding을 통해 생성된 OData 데이터를 기반으로 Fiori Elements에서 항공편 목록이 조회되어 테이블에 표시
 - 컬럼을 설정한 후 Go 버튼을 누르면 OData 데이터가 조회되어 테이블에 표시
 
