Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -465,16 +465,16 @@ annotate view ZDSFLIGHT_CR_B03 with
 
 | 어노테이션 | 적용 위치 | 설명 |
 |------------|------------|------|
-| `@AccessControl.authorizationCheck: #NOT_REQUIRED` | View 상단 | 권한 체크 비활성화 |
-| `@Metadata.ignorePropagatedAnnotations: false` | View 상단 | 상위 View 어노테이션 전파 허용 |
-| `@Metadata.allowExtensions: true` | View 상단 | Metadata Extension 확장 허용 |
-| `@Search.searchable: true` | View 상단 | 전체 View를 검색 가능하게 설정 |
-| `@Search.defaultSearchElement: true` | Carrid / Currency / Carrname | 기본 검색 필드 지정 |
-| `@Search.fuzzinessThreshold: 0.8` | Carrname | 유사 검색 허용 (80% 일치) |
-| `@Consumption.valueHelpDefinition` | Carrid | F4 Value Help 연결 |
-| `additionalBinding` | Carrid | 값 도움 시 추가 필드 자동 바인딩 |
-| `@ObjectModel.text.element: ['Carrname']` | Carrid | 코드-텍스트 연결 |
-| `@UI.textArrangement: #TEXT_FIRST` | Carrid | 텍스트 먼저 표시 (텍스트-코드 순서) |
+| `@AccessControl.authorizationCheck` | View 레벨 | 권한 체크 여부 설정 |
+| `@Metadata.ignorePropagatedAnnotations` | View 레벨 | 상위 View 어노테이션 전파 제어 |
+| `@Metadata.allowExtensions` | View 레벨 | Metadata Extension 확장 허용 여부 |
+| `@Search.searchable` | View 레벨 | View 전체를 검색 가능하게 설정 |
+| `@Search.defaultSearchElement` | 필드 레벨 | 기본 검색 대상 필드 지정 |
+| `@Search.fuzzinessThreshold` | 필드 레벨 | 유사 검색 허용 범위 설정 |
+| `@Consumption.valueHelpDefinition` | 필드 레벨 | Value Help(F4 도움말) 연결 |
+| `additionalBinding` | Value Help 내부 설정 | 값 도움 선택 시 다른 필드 자동 매핑 |
+| `@ObjectModel.text.element` | 코드 필드 레벨 | 코드 필드와 텍스트 필드 연결 |
+| `@UI.textArrangement` | 코드 필드 레벨 | 코드·텍스트 표시 순서 설정 |
 
 </br>
 
