Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -499,15 +499,21 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 1) 
-
-- 어노테이션 그룹핑 Grouping : 같은 필드에 적용되는 UI 설정을` @UI: { }` 안에 공통으로 묶어서 정의하는 방식
+### 1) UI 어노테이션 그룹핑(Grouping)
+- 같은 필드에 적용되는 여러 UI 설정을 `@UI: { }` 블록 안에 묶어서 한 번에 정의하는 방식
 ```abap
 @UI: {
   lineItem:       [{ position: <순서>, label: '<컬럼명>' }],
   selectionField: [{ position: <순서> }]
 }
 ```
+```abap
+@UI: {      // Metadata Extensions - ZDSFLIGHT_CR_B03
+  lineItem: [{ position: 30, label: '항공편' }], 
+  selectionField: [{ position: 20 }] 
+}
+```
+
 - `@UI.hidden: true` → 해당 필드를 화면(UI)에 표시하지 않도록 숨기는 설정
 
 </br>
