Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -461,7 +461,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 - `Metadata Extension` : 화면에 어떻게 보이게 할지(배치·표시)를 구상하는 곳
 </br>
 
-#### 1) Projection View에 작성된 어노테이션 (구조 · 검색 · 값도움 · 모델 성격)
+### 1) Projection View에 작성된 어노테이션 (구조 · 검색 · 값도움 · 모델 성격)
 
 | 어노테이션 | 적용 위치 | 설명 |
 |------------|------------|------|
@@ -508,11 +508,61 @@ annotate view ZDSFLIGHT_CR_B03 with
 }
 ```
 ```abap
-@UI: {      // Metadata Extensions - ZDSFLIGHT_CR_B03
+// Metadata Extensions - ZDSFLIGHT_CR_B03
+@UI: {      
   lineItem: [{ position: 30, label: '항공편' }], 
   selectionField: [{ position: 20 }] 
 }
 ```
+</br>
+</br>
+</br>
+
+### 2) List Report 컬럼과 필터 설정 어노테이션
+```abap
+@UI: {
+  lineItem: [{ position: <컬럼순서>, label: '<리스트에보일이름>' }],   // List Report 테이블 컬럼 표시
+  selectionField: [{ position: <필터순서> }]                       // 상단 Filter Bar 검색 필드 표시
+}
+```
+```abap
+// Metadata Extensions - ZDSFLIGHT_CR_B03
+annotate view ZDSFLIGHT_CR_B03 with
+{
+  @UI: { 
+    lineItem: [{ position: 10, label: '항공사' }],
+    selectionField: [{ position: 10 }]
+  }
+  Carrid;
+  @UI: { 
+    lineItem: [{ position: 30, label: '항공편' }],
+    selectionField: [{ position: 20 }]
+  }
+  Connid;
+  @UI.lineItem: [{ position: 40, label: '비행일' }]
+  Fldate;
+  @UI.lineItem: [{ position: 20, label: '항공편이름' }]
+  Carrname;
+  @UI.lineItem: [{ position: 50, label: '가격' }]
+  Price;
+  @UI: { 
+    lineItem: [{ position: 60, label: '통화키' }],
+    selectionField: [{ position: 11 }]
+  }
+  Currency;
+  @UI: { 
+    lineItem: [{ position: 70, label: '항공기타입' }],
+    selectionField: [{ position: 30 }]
+  }
+  Planetype;
+  @UI.lineItem: [{ position: 80, label: '최대좌석수' }]
+  Seatsmax;
+  @UI.lineItem: [{ position: 90, label: '예약좌석수' }]
+  Seatsocc;
+}
+```
+
+
 
 - `@UI.hidden: true` → 해당 필드를 화면(UI)에 표시하지 않도록 숨기는 설정
 
