Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -527,6 +527,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 ```
 ```abap
 // Metadata Extensions - ZDSFLIGHT_CR_B03
+
 annotate view ZDSFLIGHT_CR_B03 with
 {
   @UI: { 
@@ -561,10 +562,92 @@ annotate view ZDSFLIGHT_CR_B03 with
   Seatsocc;
 }
 ```
+</br>
+</br>
+</br>
+
+### 3) `@UI.hidden` 어노테이션
+- 해당 필드를 Fiori 화면에서 보이지 않게 숨기는 설정
+```abap
+@UI.hidden: true
+<필드명>;
+```
+```abap
+// Metadata Extensions - ZDSFLIGHT_CR_B03
+
+annotate view ZDSFLIGHT_CR_B03 with
+{
+  @UI.hidden: true
+  Carrname;
+  @UI.hidden: true
+  Paymentsum;
+  @UI.hidden: true
+  SeatsmaxB;
+  @UI.hidden: true
+  SeatsoccB;
+  @UI.hidden: true
+  SeatsmaxF;
+  @UI.hidden: true
+  SeatsoccF;
+}
+```
+</br>
+</br>
+</br>
+
+### 4) `@UI.headerInfo` 화면 상단 정보 설정
+- List Report와 Object Page 상단에 표시될 화면 제목과 대표 정보를 설정하는 어노테이션
+```abap
+@Metadata.layer: #CORE   // 기본 메타데이터 레이어에서 정의
+@UI: {
+  headerInfo: {
+    typeName: '<오브젝트페이지상단이름>',        // 상세(Object Page) 상단에 표시될 이름
+    typeNamePlural: '<리스트화면상단제목>',     // 메인(List Report) 상단 제목
+    title: { value: '<대표필드>' },              // 상세 화면에서 가장 크게 보이는 값
+    description: { value: '<보조설명필드>' }     // 대표 값 아래 보조 설명
+  }
+}
+```
+```abap
+@Metadata.layer: #CORE                         // 기본(Core) 메타데이터 레이어에서 정의
+@UI: {
+    headerInfo: {
+        typeName: 'SFLIGHT Typename',      // 상세(Object Page) 화면 상단에 표시되는 오브젝트 이름
+        typeNamePlural: 'Flight Plural',   // 메인(List Report) 화면 상단 제목
+        title: { value: 'Carrid' },        // 상세 화면에서 가장 크게 표시되는 대표 값
+        description: { value: 'Planetype' } // 대표 값 아래에 보이는 보조 정보
+    }
+}
+// title과 description은 한 행 클릭 시 이동하는 Object Page 상단에 표시되는 제목과 설명 필드를 설정
+```
+</br>
+</br>
+</br>
+
+### 4) Fiori List Report – View 저장 및 관리 기능
+- 사용자가 현재 설정한 필터, 컬럼, 정렬 상태를 저장할 수 있는 기능
+- `Save As` 버튼을 눌러 새로운 View 이름으로 저장 가능
+<img width="488" height="293" alt="image" src="https://github.com/user-attachments/assets/a51b80b8-8a4d-42f8-937d-1adb6338da61" />
+</br>
+</br>
+
+- `Set as Default` → 기본 화면으로 설정
+- `Public` → 다른 사용자와 공유 가능
+- `Apply Automatically` → 앱 실행 시 자동 적용
+<img width="336" height="216" alt="image" src="https://github.com/user-attachments/assets/dc6d210e-6e39-4247-a47c-b5bdefcb8a78" />
+</br>
+</br>
+
+- 저장한 레이아웃으로 바꿀 수 있음
+<img width="785" height="334" alt="image" src="https://github.com/user-attachments/assets/270f07cd-a390-4a60-a9c3-5edac2b2ec1a" />
+</br>
+</br>
+
+<img width="808" height="348" alt="image" src="https://github.com/user-attachments/assets/8c3f1c3c-0412-4926-9512-44a483b5cbfc" />
 
 
-
-- `@UI.hidden: true` → 해당 필드를 화면(UI)에 표시하지 않도록 숨기는 설정
+</br>
+</br>
 
 </br>
 </br>
