Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -620,11 +620,15 @@ annotate view ZDSFLIGHT_CR_B03 with
 }
 // title과 description은 한 행 클릭 시 이동하는 Object Page 상단에 표시되는 제목과 설명 필드를 설정
 ```
+
+<img width="221" height="96" alt="image" src="https://github.com/user-attachments/assets/4ee91337-dc5a-4ce8-b376-6bbc3dd244df" />
+</br>
+</br>
 </br>
 </br>
 </br>
 
-### 4) Fiori List Report – View 저장 및 관리 기능
+### 5) Fiori List Report – View 저장 및 관리 기능
 - 사용자가 현재 설정한 필터, 컬럼, 정렬 상태를 저장할 수 있는 기능
 - `Save As` 버튼을 눌러 새로운 View 이름으로 저장 가능
 <img width="488" height="293" alt="image" src="https://github.com/user-attachments/assets/a51b80b8-8a4d-42f8-937d-1adb6338da61" />
@@ -644,10 +648,19 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 
 <img width="808" height="348" alt="image" src="https://github.com/user-attachments/assets/8c3f1c3c-0412-4926-9512-44a483b5cbfc" />
+</br>
+</br>
 
+- Manage : 저장된 View를 확인하고, 기본값 설정·이름 변경·삭제·공유 여부를 관리하는 기능
+<img width="813" height="183" alt="image" src="https://github.com/user-attachments/assets/3aebcca4-9cc9-4b8d-9172-05d2e9958a32" />
 
 </br>
 </br>
+</br>
+</br>
+</br>
+
+### 5)
 
 </br>
 </br>
