Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -519,6 +519,8 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 
 ### 2) List Report 컬럼과 필터 설정 어노테이션
+- `lineItem` 은 List Report 테이블에 컬럼을 표시하는 설정
+- `selectionField` 는 상단 Filter Bar에 검색 입력 필드를 표시하는 설정
 ```abap
 @UI: {
   lineItem: [{ position: <컬럼순서>, label: '<리스트에보일이름>' }],   // List Report 테이블 컬럼 표시
@@ -660,8 +662,45 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 5)
+### 6) 검색 기능 설정 어노테이션 (`@Search.*`)
+- CR(Projection) View에서 전체 검색 활성화와 기본 검색 필드를 지정하는 어노테이션
+- `Search` 는 통합 검색, `selectionField` 는 조건 필터
+- `searchable` 은 검색창 ON, `defaultSearchElement` 는 검색 대상 필드 지정
+- `@Search.fuzzinessThreshold` : 유사한 문자열도 검색되도록 허용 범위를 설정하는 어노테이션
+```abap
+@Search.searchable: true   // View 전체 통합 검색 활성화
+define root view entity <CR_View_Name> as projection on <IR_View_Name>
+{
+    @Search.defaultSearchElement: true    // 기본 검색 대상 필드 지정
+    @Search.fuzzinessThreshold: <0.0~1.0> // 유사 검색 허용 범위 (1에 가까울수록 엄격)
+    <FieldName>
+}
+```
 
+- 서치할 대상으로 선언한 필드만 서치 가능
+<img width="223" height="44" alt="image" src="https://github.com/user-attachments/assets/4f137a2d-f531-42a9-ab24-9ec87ad7568c" />
+</br>
+</br>
+
+<img width="689" height="246" alt="image" src="https://github.com/user-attachments/assets/5ac49913-0fe3-457e-a56a-0ac162521035" />
+</br>
+</br>
+
+```abap
+@Search.searchable: true   // View 전체 통합 검색 활성화
+define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
+{
+    @Search.defaultSearchElement: true   // 기본 검색 대상 필드 지정
+    key Carrid,
+  
+    @Search.defaultSearchElement: true   // 기본 검색 대상 필드 지정
+    Currency,
+  
+    @Search.defaultSearchElement: true   // 기본 검색 대상 필드 지정
+    @Search.fuzzinessThreshold: 0.8      // 유사 검색 허용 (80%까지)
+    Carrname,
+}
+```
 </br>
 </br>
 
