Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -611,6 +611,8 @@ annotate view ZDSFLIGHT_CR_B03 with
 }
 ```
 ```abap
+// Metadata Extensions - ZDSFLIGHT_CR_B03
+
 @Metadata.layer: #CORE                         // 기본(Core) 메타데이터 레이어에서 정의
 @UI: {
     headerInfo: {
@@ -678,6 +680,7 @@ define root view entity <CR_View_Name> as projection on <IR_View_Name>
 ```
 
 - 서치할 대상으로 선언한 필드만 서치 가능
+- Search Help(Value Help)는 보통 CR(Projection) View에서 구현하는 것이 정석 구조임
 <img width="223" height="44" alt="image" src="https://github.com/user-attachments/assets/4f137a2d-f531-42a9-ab24-9ec87ad7568c" />
 </br>
 </br>
@@ -688,12 +691,13 @@ define root view entity <CR_View_Name> as projection on <IR_View_Name>
 </br>
 
 ```abap
+// Data Definition - ZDSFLIGHT_CR_B03
+
 @Search.searchable: true   // View 전체 통합 검색 활성화
 define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
 {
     @Search.defaultSearchElement: true   // 기본 검색 대상 필드 지정
     key Carrid,
-  
     @Search.defaultSearchElement: true   // 기본 검색 대상 필드 지정
     Currency,
   
@@ -702,6 +706,40 @@ define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
     Carrname,
 }
 ```
+</br>
+</br>
+</br>
+
+### 7) `@Consumption.filter` 필터 동작 설정
+- Filter Bar에서 입력 방식(단일/다중)과 기본값을 제어하는 어노테이션
+```abap
+@Consumption.filter: {
+  selectionType: #SINGLE | #INTERVAL | #RANGE,   // 입력 형태 지정
+  multipleSelections: true | false,              // 다중 선택 허용 여부
+  defaultValue: '<기본값>',                      // 기본 단일 값
+  defaultValues: ['<값1>', '<값2>'],             // 기본 다중 값
+  mandatory: true | false                       // 필수 입력 여부
+}
+<FieldName>
+```
+
+<img width="267" height="47" alt="image" src="https://github.com/user-attachments/assets/0267f98c-fba4-4bb7-be69-ecf3dffffe91" />
+
+```abap
+// Metadata Extensions - ZDSFLIGHT_CR_B03
+
+annotate view ZDSFLIGHT_CR_B03 with
+{
+  @UI: { lineItem: [{ position: 10, label: '항공사' }], selectionField: [{ position: 10 }] }
+  @Consumption.filter: { 
+    selectionType: #SINGLE, // 단일필터 세팅
+    multipleSelections: false,  
+    defaultValue: 'AZ'      // 기본값 세팅
+  }   // 입력값을 여러 개 말고 단일값만 받고 싶을 때 설정    
+  Carrid;
+}
+```
+
 </br>
 </br>
 
