Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -723,6 +723,7 @@ define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
 <FieldName>
 ```
 
+- 서치헬프 사라지고 단일값 입력 받기와 기본값 설정 가능
 <img width="267" height="47" alt="image" src="https://github.com/user-attachments/assets/0267f98c-fba4-4bb7-be69-ecf3dffffe91" />
 
 ```abap
@@ -739,6 +740,16 @@ annotate view ZDSFLIGHT_CR_B03 with
   Carrid;
 }
 ```
+</br>
+</br>
+</br>
+
+### 8) `Manifest.json` 오브젝트 페이지 설정 제거
+- manifest.json의 ObjectPage 설정을 삭제하면 상세(Object Page) 화면이 생성되지 않음
+
+<img width="669" height="185" alt="image" src="https://github.com/user-attachments/assets/844b6c79-b109-4538-bbab-633fe61e2e8a" />
+
+
 
 </br>
 </br>
