Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -744,13 +744,32 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 8) `Manifest.json` 오브젝트 페이지 설정 제거
+### 8) BAS - `Manifest.json` 오브젝트 페이지 설정 제거
 - manifest.json의 ObjectPage 설정을 삭제하면 상세(Object Page) 화면이 생성되지 않음
 
 <img width="669" height="185" alt="image" src="https://github.com/user-attachments/assets/844b6c79-b109-4538-bbab-633fe61e2e8a" />
+</br>
+</br>
 
+-	행 클릭 시 아무 동작도 이루어지지 않음
+<img width="829" height="214" alt="image" src="https://github.com/user-attachments/assets/0cf7b231-ded5-4eb8-b401-5489fcf0966e" />
+</br>
+</br>
+</br>
+</br>
+</br>
 
+### 9) BAS - 메인 앱 타이틀 변경 방법
+- 메인 화면 상단 앱 제목은 `i18n.properties` 파일의 `appTitle` 값을 수정해서 변경
 
+<img width="525" height="191" alt="image" src="https://github.com/user-attachments/assets/a7e1d375-66b9-46a6-9cd4-b151cf9a8625" />
+</br>
+</br>
+
+<img width="674" height="184" alt="image" src="https://github.com/user-attachments/assets/8fa32e0b-e2c2-49ae-b896-36da43067a53" />
+
+</br>
+</br>
 </br>
 </br>
 
