Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -518,7 +518,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 2) List Report 컬럼과 필터 설정 어노테이션
+### 2) Metadata Extension - List Report 컬럼과 필터 설정 어노테이션
 - `lineItem` 은 List Report 테이블에 컬럼을 표시하는 설정
 - `selectionField` 는 상단 Filter Bar에 검색 입력 필드를 표시하는 설정
 ```abap
@@ -568,7 +568,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 3) `@UI.hidden` 어노테이션
+### 3) Metadata Extension - `@UI.hidden` 어노테이션
 - 해당 필드를 Fiori 화면에서 보이지 않게 숨기는 설정
 ```abap
 @UI.hidden: true
@@ -597,7 +597,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 4) `@UI.headerInfo` 화면 상단 정보 설정
+### 4) Metadata Extension - `@UI.headerInfo` 화면 상단 정보 설정
 - List Report와 Object Page 상단에 표시될 화면 제목과 대표 정보를 설정하는 어노테이션
 ```abap
 @Metadata.layer: #CORE   // 기본 메타데이터 레이어에서 정의
@@ -632,7 +632,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 5) Fiori List Report – View 저장 및 관리 기능
+### 5) BAS - Fiori List Report – View 저장 및 관리 기능
 - 사용자가 현재 설정한 필터, 컬럼, 정렬 상태를 저장할 수 있는 기능
 - `Save As` 버튼을 눌러 새로운 View 이름으로 저장 가능
 <img width="488" height="293" alt="image" src="https://github.com/user-attachments/assets/a51b80b8-8a4d-42f8-937d-1adb6338da61" />
@@ -664,7 +664,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 </br>
 
-### 6) 검색 기능 설정 어노테이션 (`@Search.*`)
+### 6) Projection View - 검색 기능 설정 어노테이션 (`@Search.*`)
 - CR(Projection) View에서 전체 검색 활성화와 기본 검색 필드를 지정하는 어노테이션
 - `Search` 는 통합 검색, `selectionField` 는 조건 필터
 - `searchable` 은 검색창 ON, `defaultSearchElement` 는 검색 대상 필드 지정
@@ -710,7 +710,7 @@ define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
 </br>
 </br>
 
-### 7) `@Consumption.filter` 필터 동작 설정
+### 7) Metadata Extension - `@Consumption.filter` 필터 동작 설정
 - Filter Bar에서 입력 방식(단일/다중)과 기본값을 제어하는 어노테이션
 ```abap
 @Consumption.filter: {
@@ -763,6 +763,11 @@ annotate view ZDSFLIGHT_CR_B03 with
 - 메인 화면 상단 앱 제목은 `i18n.properties` 파일의 `appTitle` 값을 수정해서 변경
 
 <img width="525" height="191" alt="image" src="https://github.com/user-attachments/assets/a7e1d375-66b9-46a6-9cd4-b151cf9a8625" />
+</br>
+</br>
+
+- 위도 바뀜
+<img width="95" height="31" alt="image" src="https://github.com/user-attachments/assets/f0c717a2-1d97-496d-860b-d7f2f10f5c59" />
 </br>
 </br>
 
